Added background image and Star Jedi font

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Star Wars RPG</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link href="http://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+    <h1>Star Wars RPG!</h1>
+    <h2>Your Character</h2>
+    <h2>Enemies to Attack</h2>
+    <h2>Fight Section</h2>
+    <h2>Defender</h2>
+<script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
