Modified style.css and index.html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
 
 <body>
     <h1>Star Wars RPG!</h1>
+    <div id="choose-character"></div>
     <h2>Your Character</h2>
+    <div id="your-character"></div>
     <h2>Enemies to Attack</h2>
+    <div id="enemies-to-attack"></div>
     <h2>Fight Section</h2>
+    <button id="attack">Attack</button>
     <h2>Defender</h2>
+    <div id="defender"></div>
+    <div id="message"></div>
 <script src="assets/javascript/game.js"></script>
 </body>
 
