--- a/index.html
+++ b/index.html
@@ -9,15 +9,35 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link href="http://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <h1>Star Wars RPG!</h1>
-    <div id="choose-character"></div>
+    <div id="choose-character">
+        <figure class="fighter" id="luke-skywalker">
+            <figcaption>Luke Skywalker</figcaption>
+            <img src="assets/images/luke-skywalker.JPG">
+            <figcaption>100</figcaption>
+        </figure>
+        <figure class="fighter" id="rey">
+            <figcaption>Rey</figcaption>
+            <img src="assets/images/rey.JPG">
+            <figcaption>120</figcaption>
+        </figure>
+        <figure class="fighter" id="kylo-ren">
+            <figcaption>Kylo Ren</figcaption>
+            <img src="assets/images/kylo-ren.JPG">
+            <figcaption>150</figcaption>
+        </figure>
+        <figure class="fighter" id="darth-vader">
+            <figcaption>Darth vader</figcaption>
+            <img src="assets/images/darth-vader.JPG">
+            <figcaption>180</figcaption>
+        </figure>
+    </div>
+    <br>
     <h2>Your Character</h2>
     <div id="your-character"></div>
     <h2>Enemies to Attack</h2>
@@ -27,7 +47,7 @@
     <h2>Defender</h2>
     <div id="defender"></div>
     <div id="message"></div>
-<script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
