Modified style.css, game.js, and index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <h2>Your Character</h2>
     <div id="your-character"></div>
-    <h2>Enemies to Attack</h2>
+    <h2>Enemies Available to Attack</h2>
     <div id="enemies-to-attack"></div>
     <h2>Fight Section</h2>
     <button id="attack">Attack</button>
