Modified style.css, game.js, and index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Star Wars RPG</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link href="http://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet">
+    <link href="https://allfont.net/allfont.css?fonts=star-jedi" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -16,22 +16,22 @@
 <body>
     <h1>Star Wars RPG!</h1>
     <div id="choose-character">
-        <figure class="fighter" id="luke-skywalker">
+        <figure class="fighter" id="choose-luke-skywalker">
             <figcaption>Luke Skywalker</figcaption>
             <img src="assets/images/luke-skywalker.JPG">
             <figcaption>100</figcaption>
         </figure>
-        <figure class="fighter" id="rey">
+        <figure class="fighter" id="choose-rey">
             <figcaption>Rey</figcaption>
             <img src="assets/images/rey.JPG">
             <figcaption>120</figcaption>
         </figure>
-        <figure class="fighter" id="kylo-ren">
+        <figure class="fighter" id="choose-kylo-ren">
             <figcaption>Kylo Ren</figcaption>
             <img src="assets/images/kylo-ren.JPG">
             <figcaption>150</figcaption>
         </figure>
-        <figure class="fighter" id="darth-vader">
+        <figure class="fighter" id="choose-darth-vader">
             <figcaption>Darth vader</figcaption>
             <img src="assets/images/darth-vader.JPG">
             <figcaption>180</figcaption>
@@ -46,7 +46,8 @@
     <h2>Defender</h2>
     <div id="defender"></div>
     <div id="message"></div>
-    <script src="assets/javascript/game.js"></script>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
 </html>
